src/bestiary/PrizeFormulaParser.py
# Generated from C:/Users/peter/Documents/Projects/mmegfarm/src/bestiary/data_files\PrizeFormula.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class PrizeFormulaParser(Parser):
    grammarFileName = "PrizeFormula.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "';'", "'p:'", "'['", "','", "']'", "'daily:'",
                    "'w:'", "'victory['", "'('", "')'", "':'", "'xp:'",
                    "'xpGuild:'", "'guildPotion:'", "':addMax'", "'runePattern:'",
                    "'rune:'", "'evolutionItemPattern:'", "'creaturePattern:'",
                    "'creature:'"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "AMOUNT", "CURRENCY", "ENERGY", "SKU",
                     "WS"]

    RULE_rewards = 0
    RULE_reward = 1
    RULE_singleReward = 2
    RULE_probabilityReward = 3
    RULE_dailyReward = 4
    RULE_waveReward = 5
    RULE_victoryReward = 6
    RULE_battleReward = 7
    RULE_partialProbReward = 8
    RULE_simpleReward = 9
    RULE_xpReward = 10
    RULE_xpGuildReward = 11
    RULE_guildPotionReward = 12
    RULE_addMaxEnergyReward = 13
    RULE_patternReward = 14
    RULE_runePattern = 15
    RULE_rune = 16
    RULE_evolutionItemPattern = 17
    RULE_creaturePattern = 18
    RULE_creature = 19

    ruleNames = ["rewards", "reward", "singleReward", "probabilityReward",
                 "dailyReward", "waveReward", "victoryReward", "battleReward",
                 "partialProbReward", "simpleReward", "xpReward", "xpGuildReward",
                 "guildPotionReward", "addMaxEnergyReward", "patternReward",
                 "runePattern", "rune", "evolutionItemPattern", "creaturePattern",
                 "creature"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    AMOUNT = 21
    CURRENCY = 22
    ENERGY = 23
    SKU = 24
    WS = 25

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class RewardsContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def reward(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PrizeFormulaParser.RewardContext)
            else:
                return self.getTypedRuleContext(PrizeFormulaParser.RewardContext, i)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_rewards

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRewards"):
                return visitor.visitRewards(self)
            else:
                return visitor.visitChildren(self)

    def rewards(self):

        localctx = PrizeFormulaParser.RewardsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rewards)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.reward()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PrizeFormulaParser.T__0:
                self.state = 41
                self.match(PrizeFormulaParser.T__0)
                self.state = 42
                self.reward()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singleReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.SingleRewardContext, 0)

        def probabilityReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.ProbabilityRewardContext, 0)

        def dailyReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.DailyRewardContext, 0)

        def waveReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.WaveRewardContext, 0)

        def victoryReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.VictoryRewardContext, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_reward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitReward"):
                return visitor.visitReward(self)
            else:
                return visitor.visitChildren(self)

    def reward(self):

        localctx = PrizeFormulaParser.RewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_reward)
        try:
            self.state = 53
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrizeFormulaParser.T__12, PrizeFormulaParser.T__13, PrizeFormulaParser.T__15,
                         PrizeFormulaParser.T__16, PrizeFormulaParser.T__17, PrizeFormulaParser.T__18,
                         PrizeFormulaParser.T__19, PrizeFormulaParser.CURRENCY, PrizeFormulaParser.ENERGY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.singleReward()
                pass
            elif token in [PrizeFormulaParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.probabilityReward()
                pass
            elif token in [PrizeFormulaParser.T__5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.dailyReward()
                pass
            elif token in [PrizeFormulaParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.waveReward()
                pass
            elif token in [PrizeFormulaParser.T__7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.victoryReward()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SingleRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.SimpleRewardContext, 0)

        def patternReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.PatternRewardContext, 0)

        def addMaxEnergyReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.AddMaxEnergyRewardContext, 0)

        def creature(self):
            return self.getTypedRuleContext(PrizeFormulaParser.CreatureContext, 0)

        def rune(self):
            return self.getTypedRuleContext(PrizeFormulaParser.RuneContext, 0)

        def guildPotionReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.GuildPotionRewardContext, 0)

        def xpGuildReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.XpGuildRewardContext, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_singleReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSingleReward"):
                return visitor.visitSingleReward(self)
            else:
                return visitor.visitChildren(self)

    def singleReward(self):

        localctx = PrizeFormulaParser.SingleRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_singleReward)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrizeFormulaParser.CURRENCY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.simpleReward()
                pass
            elif token in [PrizeFormulaParser.T__15, PrizeFormulaParser.T__17, PrizeFormulaParser.T__18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.patternReward()
                pass
            elif token in [PrizeFormulaParser.ENERGY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.addMaxEnergyReward()
                pass
            elif token in [PrizeFormulaParser.T__19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.creature()
                pass
            elif token in [PrizeFormulaParser.T__16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.rune()
                pass
            elif token in [PrizeFormulaParser.T__13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.guildPotionReward()
                pass
            elif token in [PrizeFormulaParser.T__12]:
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.xpGuildReward()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProbabilityRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def partialProbReward(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PrizeFormulaParser.PartialProbRewardContext)
            else:
                return self.getTypedRuleContext(PrizeFormulaParser.PartialProbRewardContext, i)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_probabilityReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProbabilityReward"):
                return visitor.visitProbabilityReward(self)
            else:
                return visitor.visitChildren(self)

    def probabilityReward(self):

        localctx = PrizeFormulaParser.ProbabilityRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_probabilityReward)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(PrizeFormulaParser.T__1)
            self.state = 65
            self.match(PrizeFormulaParser.AMOUNT)
            self.state = 66
            self.match(PrizeFormulaParser.T__2)
            self.state = 67
            self.partialProbReward()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PrizeFormulaParser.T__3:
                self.state = 68
                self.match(PrizeFormulaParser.T__3)
                self.state = 69
                self.partialProbReward()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self.match(PrizeFormulaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DailyRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def simpleReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.SimpleRewardContext, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_dailyReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDailyReward"):
                return visitor.visitDailyReward(self)
            else:
                return visitor.visitChildren(self)

    def dailyReward(self):

        localctx = PrizeFormulaParser.DailyRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dailyReward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(PrizeFormulaParser.T__5)
            self.state = 78
            self.match(PrizeFormulaParser.AMOUNT)
            self.state = 79
            self.match(PrizeFormulaParser.T__2)
            self.state = 80
            self.simpleReward()
            self.state = 81
            self.match(PrizeFormulaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WaveRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def battleReward(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PrizeFormulaParser.BattleRewardContext)
            else:
                return self.getTypedRuleContext(PrizeFormulaParser.BattleRewardContext, i)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_waveReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWaveReward"):
                return visitor.visitWaveReward(self)
            else:
                return visitor.visitChildren(self)

    def waveReward(self):

        localctx = PrizeFormulaParser.WaveRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_waveReward)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PrizeFormulaParser.T__6)
            self.state = 84
            self.match(PrizeFormulaParser.AMOUNT)
            self.state = 85
            self.match(PrizeFormulaParser.T__2)
            self.state = 86
            self.battleReward()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PrizeFormulaParser.T__3:
                self.state = 87
                self.match(PrizeFormulaParser.T__3)
                self.state = 88
                self.battleReward()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(PrizeFormulaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VictoryRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def battleReward(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PrizeFormulaParser.BattleRewardContext)
            else:
                return self.getTypedRuleContext(PrizeFormulaParser.BattleRewardContext, i)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_victoryReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVictoryReward"):
                return visitor.visitVictoryReward(self)
            else:
                return visitor.visitChildren(self)

    def victoryReward(self):

        localctx = PrizeFormulaParser.VictoryRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_victoryReward)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(PrizeFormulaParser.T__7)
            self.state = 97
            self.battleReward()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PrizeFormulaParser.T__3:
                self.state = 98
                self.match(PrizeFormulaParser.T__3)
                self.state = 99
                self.battleReward()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(PrizeFormulaParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BattleRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def probabilityReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.ProbabilityRewardContext, 0)

        def singleReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.SingleRewardContext, 0)

        def xpReward(self):
            return self.getTypedRuleContext(PrizeFormulaParser.XpRewardContext, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_battleReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBattleReward"):
                return visitor.visitBattleReward(self)
            else:
                return visitor.visitChildren(self)

    def battleReward(self):

        localctx = PrizeFormulaParser.BattleRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_battleReward)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrizeFormulaParser.T__1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.probabilityReward()
                pass
            elif token in [PrizeFormulaParser.T__12, PrizeFormulaParser.T__13, PrizeFormulaParser.T__15,
                           PrizeFormulaParser.T__16, PrizeFormulaParser.T__17, PrizeFormulaParser.T__18,
                           PrizeFormulaParser.T__19, PrizeFormulaParser.CURRENCY, PrizeFormulaParser.ENERGY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.singleReward()
                pass
            elif token in [PrizeFormulaParser.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.xpReward()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PartialProbRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def singleReward(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(PrizeFormulaParser.SingleRewardContext)
            else:
                return self.getTypedRuleContext(PrizeFormulaParser.SingleRewardContext, i)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_partialProbReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPartialProbReward"):
                return visitor.visitPartialProbReward(self)
            else:
                return visitor.visitChildren(self)

    def partialProbReward(self):

        localctx = PrizeFormulaParser.PartialProbRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_partialProbReward)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PrizeFormulaParser.AMOUNT)
            self.state = 113
            self.match(PrizeFormulaParser.T__8)
            self.state = 114
            self.singleReward()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == PrizeFormulaParser.T__3:
                self.state = 115
                self.match(PrizeFormulaParser.T__3)
                self.state = 116
                self.singleReward()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(PrizeFormulaParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SimpleRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CURRENCY(self):
            return self.getToken(PrizeFormulaParser.CURRENCY, 0)

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_simpleReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSimpleReward"):
                return visitor.visitSimpleReward(self)
            else:
                return visitor.visitChildren(self)

    def simpleReward(self):

        localctx = PrizeFormulaParser.SimpleRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_simpleReward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(PrizeFormulaParser.CURRENCY)
            self.state = 125
            self.match(PrizeFormulaParser.T__10)
            self.state = 126
            self.match(PrizeFormulaParser.AMOUNT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XpRewardContext(ParserRuleContext):
        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_xpReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitXpReward"):
                return visitor.visitXpReward(self)
            else:
                return visitor.visitChildren(self)

    def xpReward(self):

        localctx = PrizeFormulaParser.XpRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_xpReward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(PrizeFormulaParser.T__11)
            self.state = 129
            self.match(PrizeFormulaParser.AMOUNT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class XpGuildRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_xpGuildReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitXpGuildReward"):
                return visitor.visitXpGuildReward(self)
            else:
                return visitor.visitChildren(self)

    def xpGuildReward(self):

        localctx = PrizeFormulaParser.XpGuildRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_xpGuildReward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(PrizeFormulaParser.T__12)
            self.state = 132
            self.match(PrizeFormulaParser.AMOUNT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GuildPotionRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SKU(self):
            return self.getToken(PrizeFormulaParser.SKU, 0)

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_guildPotionReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGuildPotionReward"):
                return visitor.visitGuildPotionReward(self)
            else:
                return visitor.visitChildren(self)

    def guildPotionReward(self):

        localctx = PrizeFormulaParser.GuildPotionRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_guildPotionReward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(PrizeFormulaParser.T__13)
            self.state = 135
            self.match(PrizeFormulaParser.SKU)
            self.state = 136
            self.match(PrizeFormulaParser.T__10)
            self.state = 137
            self.match(PrizeFormulaParser.AMOUNT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddMaxEnergyRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENERGY(self):
            return self.getToken(PrizeFormulaParser.ENERGY, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_addMaxEnergyReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddMaxEnergyReward"):
                return visitor.visitAddMaxEnergyReward(self)
            else:
                return visitor.visitChildren(self)

    def addMaxEnergyReward(self):

        localctx = PrizeFormulaParser.AddMaxEnergyRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_addMaxEnergyReward)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(PrizeFormulaParser.ENERGY)
            self.state = 140
            self.match(PrizeFormulaParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PatternRewardContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def runePattern(self):
            return self.getTypedRuleContext(PrizeFormulaParser.RunePatternContext, 0)

        def evolutionItemPattern(self):
            return self.getTypedRuleContext(PrizeFormulaParser.EvolutionItemPatternContext, 0)

        def creaturePattern(self):
            return self.getTypedRuleContext(PrizeFormulaParser.CreaturePatternContext, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_patternReward

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPatternReward"):
                return visitor.visitPatternReward(self)
            else:
                return visitor.visitChildren(self)

    def patternReward(self):

        localctx = PrizeFormulaParser.PatternRewardContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_patternReward)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PrizeFormulaParser.T__15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.runePattern()
                pass
            elif token in [PrizeFormulaParser.T__17]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.evolutionItemPattern()
                pass
            elif token in [PrizeFormulaParser.T__18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.creaturePattern()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RunePatternContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SKU(self):
            return self.getToken(PrizeFormulaParser.SKU, 0)

        def AMOUNT(self):
            return self.getToken(PrizeFormulaParser.AMOUNT, 0)

        def getRuleIndex(self):
            return PrizeFormulaParser.RULE_runePattern

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRunePattern"):
                return visitor.visitRunePattern(self)
            else:
                return visitor.visitChildren(self)

    def runePattern(self):
